2007-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-toolbar-configurations): Enable it for GTK Emacs;
	exclude auto-resize-tool-bars and auto-raise-tool-bar-buttons.

2007-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Remove book.edu,
	book.navi, book.pocket book.watch, culture.column, digital,
	digital.apc and digital.hotwired groups; add book.life,
	book.newstar, book.review.business, book.review.digital,
	book.review.edu, book.review.international, book.review.life,
	book.trendwatch and business.fund groups; update Japanese names of
	book.bestseller, book.booktimes and book.comic groups.
	(shimbun-asahi-prepare-article): Fix regexp matching critics' name;
	remove adv for car.* and digital.column01 groups; add missing
	content-end for digital.column01 group.

	* w3m.el (w3m-clean-hook-options): Remove.

2007-01-31  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-search.el (w3m-search-read-query): Check that face property
	is `list' to avoid argument error.

2007-01-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-define-w3m-make-ccl-coding-system): Rename from
	w3m-xmas-define-w3m-make-ccl-coding-system.
	(w3m-toolbar-make-buttons): Rename from
	w3m-xmas-make-toolbar-buttons.
	(w3m-define-missing-widgets): Rename from
	w3m-xmas-define-missing-widgets.
	(w3m-show-current-title-in-buffer-tab): Rename from
	w3m-xmas-show-current-title-in-buffer-tab.
	(w3m-setup-tab-in-gutter): Rename from
	w3m-xmas-setup-tab-in-gutter.
	(w3m-update-tab-in-gutter): Rename from
	w3m-xmas-update-tab-in-gutter.

	* w3m-e21.el (w3m-toolbar-icon-preferred-image-types)
	(w3m-toolbar-icon-preferred-image-types): Use w3m-update-toolbars
	instead of w3m-setup-toolbar.
	(w3m-toolbar-configurations): Rename from
	w3m-e21-toolbar-configurations; make it customizable for LUCID
	Emacs.
	(w3m-toolbar-define-keys): Rename from w3m-e21-setup-toolbar;
	don't apply w3m-toolbar-configurations here.